--- a/introduction.ipynb
+++ b/introduction.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "V28",
-      "authorship_tag": "ABX9TyMjJm10M/MdGWTs1cLLzhPV",
+      "authorship_tag": "ABX9TyM2xbQTXnsDffXMAl+fnlod",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -154,6 +154,22 @@
           "execution_count": 11
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Data Type**\n",
+        "\n",
+        "\n",
+        "1.   Integer\n",
+        "2.   Float\n",
+        "3.   String\n",
+        "4.   Boolean\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "97SmC4o-etIG"
+      }
     },
     {
       "cell_type": "code",
