--- a/datastructure.ipynb
+++ b/datastructure.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNz+3U1qgFt9Lhhtj1v9HZ+",
+      "authorship_tag": "ABX9TyMsdRMUuSMW/u5tUaPqByi2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 27,
       "metadata": {
         "id": "4gnf2-gjMXoM"
       },
@@ -55,7 +55,7 @@
       "metadata": {
         "id": "-rME2X-HOI-1"
       },
-      "execution_count": 14,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -75,9 +75,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XODhap5KOTAw",
-        "outputId": "fe2ec247-13e7-419e-d1ea-b32b3a515843"
+        "outputId": "0f6382f5-078c-4e9d-cc60-7f934ff3efd8"
       },
-      "execution_count": 15,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,9 +98,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7clDizwnOXCc",
-        "outputId": "124a9674-69b9-4bc8-c4b0-b0f87d876c90"
+        "outputId": "3f11d565-839f-4da6-af93-a3a85f05f9bd"
       },
-      "execution_count": 16,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -110,7 +110,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 30
         }
       ]
     },
@@ -123,7 +123,7 @@
       "metadata": {
         "id": "R1fX9ZZ-OkLd"
       },
-      "execution_count": 17,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -136,9 +136,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CwFYgoDoOuJ_",
-        "outputId": "a4aa4460-d74f-4106-9e36-f228b6b2a6ee"
+        "outputId": "a1439412-9ce2-4c62-f5d7-c4352ccf77bf"
       },
-      "execution_count": 18,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -148,7 +148,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 32
         }
       ]
     },
@@ -161,7 +161,7 @@
       "metadata": {
         "id": "F9eGisPZOwMB"
       },
-      "execution_count": 19,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -174,9 +174,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HmFfoNKBO1xd",
-        "outputId": "28598f5f-6428-473e-9795-1c5e45f9c436"
+        "outputId": "a84dcb0b-66e3-4328-df9a-ec1d1fbd72b3"
       },
-      "execution_count": 20,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -186,7 +186,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 34
         }
       ]
     },
@@ -201,9 +201,9 @@
           "height": 35
         },
         "id": "rmsDUUz0O4lL",
-        "outputId": "c5dcebe7-8a7f-435d-9ba2-2cb046d7bde8"
+        "outputId": "7ad0b394-4f2e-414a-db94-f2408fd9dac2"
       },
-      "execution_count": 21,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -216,7 +216,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 35
         }
       ]
     },
@@ -233,9 +233,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rDMZOKFtQCuh",
-        "outputId": "a0a2b896-d3a4-4840-afe6-0f9f5a4a45fd"
+        "outputId": "d32a9fa3-e568-4211-a283-fdd5bc705d30"
       },
-      "execution_count": 22,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -245,7 +245,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 36
         }
       ]
     },
@@ -261,9 +261,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ShvbvZAMQdEM",
-        "outputId": "b421aedc-2dfa-4df0-ef2c-dece702b7301"
+        "outputId": "943c82c8-dc22-4779-bc38-efb7946e00fb"
       },
-      "execution_count": 23,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -273,7 +273,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 37
         }
       ]
     },
@@ -301,9 +301,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AjSXmt0IQors",
-        "outputId": "96f6d027-a533-4402-9643-e3cef3f51d35"
+        "outputId": "8e6dad04-ea0d-4c3d-e0df-cb815f21548c"
       },
-      "execution_count": 24,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -313,7 +313,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 38
         }
       ]
     },
@@ -329,9 +329,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qv1bjefdRYTX",
-        "outputId": "9a954793-da99-4b16-b846-ba04d474f063"
+        "outputId": "d006ce0b-e92f-4e9e-ad3f-abb459cd939b"
       },
-      "execution_count": 25,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -341,7 +341,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 39
         }
       ]
     },
@@ -357,9 +357,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "55JqUj-ZRdL8",
-        "outputId": "328da78e-2876-42fe-dbda-568600df58b6"
+        "outputId": "f48b8f55-4ee5-4e7a-bf71-a93f6e9a381b"
       },
-      "execution_count": 26,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -369,14 +369,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 40
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Add Orange to the first index.\n",
+        "# Add an element Orange to be the first element in the list such that the resultant list will have - Orange, Apple, Cherry, Mango\n",
         "fruits.insert(0, 'Orange')\n",
         "fruits"
       ],
@@ -385,9 +385,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tA-QPQPZRlQB",
-        "outputId": "25641a24-e42b-4f44-b5c8-d096ec296e84"
+        "outputId": "d84b75db-1588-4181-bf99-c0a4595275cb"
       },
-      "execution_count": 27,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -397,7 +397,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 41
         }
       ]
     },
@@ -407,7 +407,7 @@
       "metadata": {
         "id": "yL51KJbXRxwz"
       },
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": []
     }
   ]
