Update on sets.

--- a/datastructure.ipynb
+++ b/datastructure.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMsdRMUuSMW/u5tUaPqByi2",
+      "authorship_tag": "ABX9TyPJ7PgAkpE7eQIotYS3Pf53",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 54,
       "metadata": {
         "id": "4gnf2-gjMXoM"
       },
@@ -55,7 +55,7 @@
       "metadata": {
         "id": "-rME2X-HOI-1"
       },
-      "execution_count": 28,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -75,9 +75,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XODhap5KOTAw",
-        "outputId": "0f6382f5-078c-4e9d-cc60-7f934ff3efd8"
+        "outputId": "ebdd14bb-bbf5-4fbd-dcb8-faad9a819c9b"
       },
-      "execution_count": 29,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,9 +98,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7clDizwnOXCc",
-        "outputId": "3f11d565-839f-4da6-af93-a3a85f05f9bd"
+        "outputId": "7cf01c98-e48d-49b1-f3d9-56710b9379de"
       },
-      "execution_count": 30,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -110,7 +110,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 57
         }
       ]
     },
@@ -123,7 +123,7 @@
       "metadata": {
         "id": "R1fX9ZZ-OkLd"
       },
-      "execution_count": 31,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -136,9 +136,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CwFYgoDoOuJ_",
-        "outputId": "a1439412-9ce2-4c62-f5d7-c4352ccf77bf"
+        "outputId": "9dd0edec-3458-4ff4-e906-493fa828d53a"
       },
-      "execution_count": 32,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -148,7 +148,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 59
         }
       ]
     },
@@ -161,7 +161,7 @@
       "metadata": {
         "id": "F9eGisPZOwMB"
       },
-      "execution_count": 33,
+      "execution_count": 60,
       "outputs": []
     },
     {
@@ -174,9 +174,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HmFfoNKBO1xd",
-        "outputId": "a84dcb0b-66e3-4328-df9a-ec1d1fbd72b3"
+        "outputId": "874fd6e0-9098-446d-b786-8c36f2a5d0b9"
       },
-      "execution_count": 34,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -186,7 +186,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 61
         }
       ]
     },
@@ -201,9 +201,9 @@
           "height": 35
         },
         "id": "rmsDUUz0O4lL",
-        "outputId": "7ad0b394-4f2e-414a-db94-f2408fd9dac2"
+        "outputId": "9b4618af-b802-448f-ef9b-a5c065765338"
       },
-      "execution_count": 35,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -216,7 +216,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 62
         }
       ]
     },
@@ -233,9 +233,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rDMZOKFtQCuh",
-        "outputId": "d32a9fa3-e568-4211-a283-fdd5bc705d30"
+        "outputId": "e7b3700e-cab2-4fbc-ca1d-0ddd4c699244"
       },
-      "execution_count": 36,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -245,7 +245,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 63
         }
       ]
     },
@@ -261,9 +261,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ShvbvZAMQdEM",
-        "outputId": "943c82c8-dc22-4779-bc38-efb7946e00fb"
+        "outputId": "800d1b8a-168b-4315-9380-33949a362bc0"
       },
-      "execution_count": 37,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -273,7 +273,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 64
         }
       ]
     },
@@ -301,9 +301,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AjSXmt0IQors",
-        "outputId": "8e6dad04-ea0d-4c3d-e0df-cb815f21548c"
+        "outputId": "30e75b46-2ed2-403f-8302-1c19f3f03dec"
       },
-      "execution_count": 38,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -313,7 +313,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 65
         }
       ]
     },
@@ -329,9 +329,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qv1bjefdRYTX",
-        "outputId": "d006ce0b-e92f-4e9e-ad3f-abb459cd939b"
+        "outputId": "b7ffdbe6-989f-44b3-a6d1-0ccc0ac448b3"
       },
-      "execution_count": 39,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -341,7 +341,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 66
         }
       ]
     },
@@ -357,9 +357,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "55JqUj-ZRdL8",
-        "outputId": "f48b8f55-4ee5-4e7a-bf71-a93f6e9a381b"
+        "outputId": "03f09bfb-f24e-4850-973a-23daf4dbea0e"
       },
-      "execution_count": 40,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -369,7 +369,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 40
+          "execution_count": 67
         }
       ]
     },
@@ -385,9 +385,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tA-QPQPZRlQB",
-        "outputId": "d84b75db-1588-4181-bf99-c0a4595275cb"
+        "outputId": "bc3f7b8b-68d2-48c1-ca27-476e17332dd4"
       },
-      "execution_count": 41,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -397,7 +397,372 @@
             ]
           },
           "metadata": {},
-          "execution_count": 41
+          "execution_count": 68
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2. Tuples\n",
+        "- Tuples are ordered and immutable sequences\n"
+      ],
+      "metadata": {
+        "id": "A5OmgUZ8Ulqb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a tuple\n",
+        "my_tuple = (1, 'apple', 3, 'Tashi')"
+      ],
+      "metadata": {
+        "id": "mlRtFaDQUyJE"
+      },
+      "execution_count": 69,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Access elements\n",
+        "my_tuple[3]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "-MmAzAxPVZCK",
+        "outputId": "d180bf2e-d8d2-46a1-e802-abfd1cb9043b"
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Tashi'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 70
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Tuple are immutable\n",
+        "#my_tuple.append(9) -  This will throw and exceptions."
+      ],
+      "metadata": {
+        "id": "-vLtGHekVrsr"
+      },
+      "execution_count": 83,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3. Dictionaries\n",
+        "- Unordered collections of key-value pairs."
+      ],
+      "metadata": {
+        "id": "HU6RIl8kWABm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a dictionaries\n",
+        "student = {\n",
+        "  'name': \"Tashi\",\n",
+        "  'age': 30,\n",
+        "  'country': 'Bhutan'\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "mZr8ycVEWHbR"
+      },
+      "execution_count": 72,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "student"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sFq_JYk0WRZw",
+        "outputId": "e025f0d5-4007-4137-87ab-fa3c0ae1f544"
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'name': 'Tashi', 'age': 30, 'country': 'Bhutan'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 73
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Accessing element in dictionaries.\n",
+        "student['name']"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "fxUnB3pAXgEp",
+        "outputId": "a69a6d0a-515c-43f8-f4cd-0ff63af3498c"
+      },
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Tashi'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 74
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Adding elements to the dictoionary\n",
+        "student['major'] = 'B.Sc Computer Science'\n",
+        "student"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8v6nRCBHXmxl",
+        "outputId": "ee1b3b7d-4035-4be2-888c-62d8adcbb0f5"
+      },
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'name': 'Tashi',\n",
+              " 'age': 30,\n",
+              " 'country': 'Bhutan',\n",
+              " 'major': 'B.Sc Computer Science'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 75
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "CbxuySuAYEaz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Remove age from dictionaries\n",
+        "student.pop('age')\n",
+        "student"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RYhJrG2zYCTM",
+        "outputId": "cf092d6f-ecd3-4705-8b5b-b7cd47cefbd3"
+      },
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'name': 'Tashi', 'country': 'Bhutan', 'major': 'B.Sc Computer Science'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 77
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4. Sets\n",
+        "- Unordered collections of mutable and unique elements."
+      ],
+      "metadata": {
+        "id": "-b3wkV1lY2tg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a sets\n",
+        "my_set = {6, 9, 1, 4, 2}\n",
+        "my_set"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I3Z8R-SAY-mQ",
+        "outputId": "35e531b4-a04b-4526-a584-7c91707d6b47"
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{1, 2, 4, 6, 9}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 78
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Sets are unique - it does not alow for duplicates\n",
+        "set_numbers = {1, 2, 2, 2, 4, 3, 4, 6, 7, 8, 1, 3}\n",
+        "set_numbers"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t99R7yeRaVLX",
+        "outputId": "484e63dd-4bda-46ac-d327-15b7360e7f4e"
+      },
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{1, 2, 3, 4, 6, 7, 8}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 79
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Accessing the element,\n",
+        "for item in my_set:\n",
+        "  print(item)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lOGtriHuagn5",
+        "outputId": "7adb3f45-0444-4909-87ef-d57f8aea1529"
+      },
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "4\n",
+            "6\n",
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Adding elements\n",
+        "my_set.add(8)\n",
+        "my_set"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JCoXuPOtazx-",
+        "outputId": "eb3d4820-1997-456e-80b4-439eed82a418"
+      },
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{1, 2, 4, 6, 8, 9}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 81
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Remove element from the sets\n",
+        "my_set.remove(4)\n",
+        "my_set"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KF0ayALqa6iv",
+        "outputId": "88408578-458c-47be-9085-cf726c19b83b"
+      },
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{1, 2, 6, 8, 9}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 82
         }
       ]
     },
@@ -405,9 +770,9 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "yL51KJbXRxwz"
+        "id": "nFJYE6jAbKgY"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     }
   ]
